--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -226,9 +226,11 @@
 </div>
 
 <div id="footer">
-    <div class="left">© 2013 <span>|</span> <a href="index-7.html">Privacy Policy</a></div>
+    <div class="left">© 2013-2016 <span>|</span> <a href="index-7.html">Privacy Policy</a></div>
     <div class="powered">Powered by <a href="http://www.tecnotekcr.net/" target="_blank" >Tecnotek</a></div>
 </div>
+
+<div class="modal-waiting"><!-- Place at bottom of page --></div>
 
 <script src="{{ asset('saintmichael/javascripts/vendor/jquery-1.8.1.min.js') }}"></script>
 
