--- a/web/saintmichael/stylesheets/app.css
+++ b/web/saintmichael/stylesheets/app.css
@@ -1887,7 +1887,7 @@ input[type="url"],
 textarea {
   background-color: white;
   font-family: inherit;
-  border: 2px solid #ecf0f1;
+  border: 2px solid #ced2d3;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
   color: rgba(0, 0, 0, 0.75);
