--- a/web/saintmichael/stylesheets/style.css
+++ b/web/saintmichael/stylesheets/style.css
@@ -166,6 +166,9 @@ min-height: 25px;}
 a.sortable {line-height: 32px; font-size: 15px; float: left; text-align: right; color: #949494; padding-left: 20px; background: url(../images/icons/sort_none.gif) center left no-repeat;}
 a.asc {line-height: 32px; font-size: 15px; float: left; text-align: right; padding-left: 20px; color: #949494; background: url(../images/icons/sort_asc.gif) center left no-repeat;}
 a.desc {line-height: 32px; font-size: 15px; float: left; text-align: right; color: #949494; padding-left: 20px; background: url(../images/icons/sort_desc.gif) center left no-repeat;}
+span.sortable {line-height: 32px; font-size: 15px; float: left; text-align: right; color: #949494; padding-left: 20px; background: url(../images/icons/sort_none.gif) center left no-repeat;}
+span.asc {line-height: 32px; font-size: 15px; float: left; text-align: right; padding-left: 20px; color: #949494; background: url(../images/icons/sort_asc.gif) center left no-repeat;}
+span.desc {line-height: 32px; font-size: 15px; float: left; text-align: right; color: #949494; padding-left: 20px; background: url(../images/icons/sort_desc.gif) center left no-repeat;}
 
 /* SEARCH FORM */
 #searchform { font-size:14px; }
@@ -254,3 +257,39 @@ a.desc {line-height: 32px; font-size: 15px; float: left; text-align: right; colo
 #pendientes {font-weight: bold; width: 195px; font-size: 10px; text-align: center; color: #56F36F; padding-left: 2px; background: url(../images/waitingBar.gif) center left no-repeat; display: none;}
 
 .form-type-9{width: 100%;}
+
+.sort_header {cursor: pointer;}
+.paginationButton {cursor: pointer;}
+.pagination .page, .pagination .next, .pagination .last, .pagination .first, .pagination .previous {color: #999999;}
+.pagination .pagination-msg {font-size: 10px; line-height: 24px;}
+
+/* Start by setting display:none to make this hidden.
+   Then we position it in relation to the viewport window
+   with position:fixed. Width, height, top and left speak
+   for themselves. Background we set to 80% white with
+   our animation centered, and no-repeating */
+.modal-waiting {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba(210, 209, 209, 0.8)
+    url('../images/ajax-loader.gif')
+    50% 50%
+    no-repeat;
+}
+
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+body.loading {
+    overflow: hidden;
+}
+
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+body.loading .modal-waiting {
+    display: block;
+}
