--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -287,7 +287,7 @@
                                 <div class="groupContainer group_{{ group.id }} inst_{{ group.institution.id }} niv_{{ group.grade.id }}">
                                     <div class="titles" style="font-size: 10px;">
                                         <div class="left"><span style="font-family:arial;font-size:16px;">{{corpo_name}}</span></div>
-                                        <div class="right"><span style="font-family:arial;font-size:16px;">Reporte de estudiantes. Curso Lectivo 2015</span></div>
+                                        <div class="right"><span style="font-family:arial;font-size:16px;">Reporte de estudiantes.</span></div>
                                         <div class="clear"></div>
 
                                         <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
@@ -384,7 +384,7 @@
                                 <div class="groupContainer groupS_{{ group.id }} inst_{{ group.institution.id }} niv_{{ group.grade.id }}">
                                     <div class="titles" style="font-size: 10px;">
                                         <div class="left">{{corpo_name}}</div>
-                                        <div class="right">Reporte de estudiantes. Curso Lectivo 2015</div>
+                                        <div class="right">Reporte de estudiantes.</div>
                                         <div class="clear"></div>
 
                                         <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
@@ -494,7 +494,7 @@
                     <div class="groupContainer niv_{{ grade.id }}">
                         <div class="titles" style="font-size: 10px;">
                             <div class="left">{{corpo_name}}</div>
-                            <div class="right">Reporte de estudiantes. Curso Lectivo 2015</div>
+                            <div class="right">Reporte de estudiantes.</div>
                             <div class="clear"></div>
 
                             <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
