--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -137,6 +137,7 @@
                                     <li><a href="{{ path('_expediente_report_students_by_route_club') }}">{% trans %}label.students.by.route.club{% endtrans %}</a></li>
                                     <li><a href="{{ path('_expediente_report_students_by_route_club_route') }}">{% trans %}label.students.by.route.club.route{% endtrans %}</a></li>
                                     <li><a href="{{ path('_expediente_report_students_by_route_club_level') }}">{% trans %}label.students.by.route.club.level{% endtrans %}</a></li>
+                                    <li><a href="{{ path('_expediente_report_students_by_club_level') }}">{% trans %}label.students.by.club.level{% endtrans %}</a></li>
                                 </ul>
                             </li>
                             <!-- <li><a href="{{ path('_expediente_report_penalty_students') }}">{% trans %}label.penalty.report{% endtrans %}</a></li> -->
