Initial version of excel generation for grades qualifications

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/emails.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/emails.html.twig
@@ -101,6 +101,16 @@
                     <div class="formRow">
                         <div class="large-12 columns">
                             <div class="large-12 columns">
+                                <label style="width: 100%;">{{ 'extra.emails'|trans }}</label>
+                            </div>
+                            <div class="large-12 columns">
+                                <input type="text" id="extraEmails" name="extraEmails"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="formRow">
+                        <div class="large-12 columns">
+                            <div class="large-12 columns">
                                 <label>{{ 'label.subject'|trans }} *</label>
                             </div>
                             <div class="large-12 columns">
