--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -582,7 +582,7 @@
                     <div class="groupContainer inst_{{ institution.id }}">
                         <div class="titles" style="font-size: 10px;">
                             <div class="left">{{corpo_name}}</div>
-                            <div class="right">Reporte de estudiantes. Curso Lectivo 2015</div>
+                            <div class="right">Reporte de estudiantes.</div>
                             <div class="clear"></div>
 
                             <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
