--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/studentsEmergency.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/studentsEmergency.html.twig
@@ -103,7 +103,7 @@
                                 <div class="groupContainer groupS_{{ group.id }} inst_{{ group.institution.id }} niv_{{ group.grade.id }}">
                                     <div class="titles" style="font-size: 10px;">
                                         <div class="left">{{corpo_name}}</div>
-                                        <div class="right">Reporte de estudiantes. Curso Lectivo 2014</div>
+                                        <div class="right">Reporte de emergencias.</div>
                                         <div class="clear"></div>
 
                                         <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
