--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
@@ -15,12 +15,10 @@
         Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
 
         Tecnotek.UI.urls["loadGroupsOfPeriodURL"] = "{{ path('_expediente_sysadmin_load_groups_of_period_q')}}";
-        Tecnotek.UI.urls["loadStudentsGroupURL"] = "{{ path("_expediente_get_students_list_of_group") }}";
+        Tecnotek.UI.urls["loadLevelsOfPeriodURL"] = "{{ path('_expediente_sysadmin_load_period_levels')}}";
+        Tecnotek.UI.urls["loadGroupsOfPeriodAndLevelsURL"] = "{{ path('_expediente_sysadmin_load_period_level_groups')}}";
+        Tecnotek.UI.urls["loadAveragesOfGroupURL"] = "{{ path('_expediente_report_best_averages_by_group')}}";
 
-        Tecnotek.UI.urls["loadQualificationsOfGroupURL"] = "{{ path("_expediente_report_group_qualifications") }}";
-        Tecnotek.UI.urls["viewPrintableVersionURL"] = "{{ path("_expediente_sysadmin_printable_group_qualifications") }}";
-
-        Tecnotek.UI.urls["getStudentsURL"] = "{{ path('_expediente_sysadmin_student_ajax_list')}}";
         Tecnotek.StudentShow.translates["relative.not.selected"] = "{% trans %}message.relative.not.selected{% endtrans %}";
     </script>
 {% endblock %}
@@ -48,6 +46,14 @@
                             <option {% if period.isActual == '1' %}  selected="selected" {% endif %} value="{{ period.id }}">{{period}}</option>
                         {% endfor %}
                     </select>
+                </div>
+
+                <div id="levelsContainer" class="left" style="margin-left: 50px;">
+                    <div class="left" style="width: 65px; font-weight: bold;">{%trans%}label.level{%endtrans%}</div>
+                    <div class="left">
+                        <select id="levels" name="levels" style="width: 150px;">
+                        </select>
+                    </div>
                 </div>
 
                 <div id="groupsContainer" class="left" style="margin-left: 50px;">
