update de promedios y reportes

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -125,6 +125,7 @@
                                     <li><a href="{{ path('_expediente_report_students_by_route_filter2') }}">{% trans %}label.students.by.route{% endtrans %} Colegio</a></li>
                                     <li><a href="{{ path('_expediente_report_absences_by_route_filter2') }}">{% trans %}label.students.absences.by.route{% endtrans %} Colegio</a></li>
                                     <li><a href="{{ path('_expediente_report_daily_by_route_filter2') }}">{% trans %}label.students.daily.by.route{% endtrans %} Colegio</a></li>
+                                    <li><a href="{{ path('_expediente_report_students_route_by_group') }}">{% trans %}label.students.route.by.group{% endtrans %}</a></li>
                                 </ul>
                             </li>
 
