--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
@@ -17,8 +17,8 @@
         Tecnotek.UI.urls["loadGroupsOfPeriodURL"] = "{{ path('_expediente_sysadmin_load_groups_of_period_q')}}";
         Tecnotek.UI.urls["loadLevelsOfPeriodURL"] = "{{ path('_expediente_sysadmin_load_period_levels')}}";
         Tecnotek.UI.urls["loadGroupsOfPeriodAndLevelsURL"] = "{{ path('_expediente_sysadmin_load_period_level_groups')}}";
-        Tecnotek.UI.urls["loadAveragesOfGroupURL"] = "{{ path('_expediente_report_best_averages_by_group')}}";
-
+        Tecnotek.UI.urls["loadAveragesOfGroupURL"] = "{{ path('_expediente_report_best_averages_by_group_detail')}}";
+        Tecnotek.UI.urls["loadEmailsURL"] = "{{ path('_expediente_emails_load')}}";
         Tecnotek.StudentShow.translates["relative.not.selected"] = "{% trans %}message.relative.not.selected{% endtrans %}";
     </script>
 {% endblock %}
