--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -108,6 +108,7 @@
                                     <li><a href="{{ path('_expediente_report_student_qualifications') }}">{% trans %}menu.detail.student.qualifications{% endtrans %}</a></li>
                                     <li><a href="{{ path('_expediente_report_course_by_group') }}">{% trans %}label.report.grades.by.group.course{% endtrans %}</a></li>
                                     <li><a href="{{ path('_expediente_report_best_averages_by_group') }}">{% trans %}menu.averages.report{% endtrans %}</a></li>
+                                    <li><a href="{{ path('_expediente_report_quintos_mep') }}">{% trans %}menu.mep.report{% endtrans %}</a></li>
                                 </ul>
                             </li>
 
