--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_group.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_group.html.twig
@@ -11,14 +11,15 @@
     <script type="text/javascript" src="{{ asset('js/tek_exp_periodGroupQualifications.js') }}"></script>
 
     <script type="text/javascript">
-        Tecnotek.module = "periodGroupAverages";
+        Tecnotek.module = "periodGroupAbsences";
         Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
 
         Tecnotek.UI.urls["loadGroupsOfPeriodURL"] = "{{ path('_expediente_sysadmin_load_groups_of_period_q')}}";
         Tecnotek.UI.urls["loadLevelsOfPeriodURL"] = "{{ path('_expediente_sysadmin_load_period_levels')}}";
         Tecnotek.UI.urls["loadGroupsOfPeriodAndLevelsURL"] = "{{ path('_expediente_sysadmin_load_period_level_groups')}}";
-        Tecnotek.UI.urls["loadAveragesOfGroupURL"] = "{{ path('_expediente_report_best_averages_by_group_detail')}}";
+        Tecnotek.UI.urls["loadAbsencesOfGroupURL"] = "{{ path('_expediente_report_best_absences_by_group_detail')}}";
         Tecnotek.StudentShow.translates["relative.not.selected"] = "{% trans %}message.relative.not.selected{% endtrans %}";
+
     </script>
 {% endblock %}
 
@@ -77,10 +78,10 @@
             <!-- Qualifications -->
             <div>
                 <div class="left">
-                    <h3>{% trans %}label.qualifications{% endtrans %}</h3>
+                    <h3>{% trans %}label.absences{% endtrans %}</h3>
                 </div>
                 <div class="left" style="line-height: 48px; margin-left: 25px;">
-                    <span>Detalle de los mejores promedios del periodo por grupo.</span>
+                    <span>Detalle de auencias del periodo por grupo.</span>
                 </div>
                 <div class="clear"></div>
             </div>
