--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -96,6 +96,7 @@
                                     <li><a href="{{ path('_expediente_report_students') }}">{% trans %}label.students{% endtrans %}</a></li>
                                     <li><a href="{{ path('_expediente_report_period_observations_by_group') }}">{% trans %}menu.observations.report{% endtrans %}</a></li>
                                     <li><a href="{{ path('_expediente_report_students_emergency') }}">{% trans %}label.students.emergency{% endtrans %}</a></li>
+                                    <li><a href="{{ path('_expediente_report_best_absences_by_group') }}">{% trans %}menu.absences.report{% endtrans %}</a></li>
                                 </ul>
                             </li>
 
