--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -84,6 +84,8 @@
                             <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_convocatorias') }}">{% trans %}label.enter.convocatorias{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_sysadmin_student_psico_esc') }}">{% trans %}label.psicologiaescuela{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_emails') }}">{% trans %}label.emails{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_sysadmin_contact') }}">{% trans %}label.contacts{% endtrans %}</a></li>
+                            <li><a style="text-align: left;" href="{{ path('_expediente_extrap') }}">{% trans %}label.extrapoints{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
