TAIGA 6: Migrate Period

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -158,6 +158,7 @@
                             <li><a href="{{ path('_expediente_sysadmin_course') }}">{% trans %}label.course{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_sysadmin_qualifications') }}">{% trans %}label.qualifications{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_sysadmin_questionnaires') }}">{% trans %}label.questionnaires.config{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_sysadmin_period_migrations') }}">{% trans %}label.period.migration{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
