TAIGA-18 Boletas de Transporte desde Site

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -68,6 +68,7 @@
                         <ul class="dropdown">
                             <li><a href="{{ path('_expediente_sysadmin_route') }}">{% trans %}label.routes{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_sysadmin_bus') }}">{% trans %}label.buses{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_sysadmin_transportation_tickets') }}">{% trans %}label.transportation.tickets.from.site{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
