--- a/src/Tecnotek/ExpedienteBundle/Resources/views/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/index.html.twig
@@ -93,19 +93,19 @@
     <div class="large-12 columns">
         <div class="grid_8" style="text-align: center;">
             <h2>Kinder</h2>
-            <a class="th" href="http://tioconejo.net/" target="_blank"><img src="{{ asset('saintmichael/images/logo_conejo.jpe') }}" data-caption="" width="175px" height="150px"></a>
+            <a class="th" href="http://tioconejo.com/" target="_blank"><img src="{{ asset('saintmichael/images/logo_conejo.jpe') }}" data-caption="" width="175px" height="150px"></a>
             <p class="pad">Espacio Reservado.</p>
             <a href="" target="_blank" class="button tiny">Ir al Sitio</a>
         </div>
         <div class="grid_8"  style="text-align: center;">
             <h2>Escuela</h2>
-            <a class="th" href="http://saintmichaelcr.net/" target="_blank"><img src="{{ asset('saintmichael/images/logo_saint.png') }}" data-caption="" width="175px" height="150px"></a>
+            <a class="th" href="http://saintmichaelcr.com/" target="_blank"><img src="{{ asset('saintmichael/images/logo_saint.png') }}" data-caption="" width="175px" height="150px"></a>
             <p class="pad">Espacio Reservado.</p>
             <a href="http://saintmichaelcr.net/" target="_blank" class="button tiny">Ir al Sitio</a>
         </div>
         <div class="grid_8" style="text-align: center;">
             <h2>Colegio</h2>
-            <a class="th" href="http://saintmichaelcr.net/" target="_blank"><img src="{{ asset('saintmichael/images/logo_saint.png') }}" data-caption="" width="175px" height="150px"></a>
+            <a class="th" href="http://saintmichaelcr.com/" target="_blank"><img src="{{ asset('saintmichael/images/logo_saint.png') }}" data-caption="" width="175px" height="150px"></a>
             <p class="pad">Espacio Reservado.</p>
             <a href="" target="_blank" class="button tiny">Ir al Sitio</a>
         </div>
